// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputChirp renders correctly when writing less than 300 chars 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderColor": "#000",
      "borderRadius": 8,
      "flexDirection": "row",
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "marginRight": 16,
      }
    }
  >
    <blockies
      bgColor="#ffffff"
      scale={5}
      seed=""
      size={8}
      spotColor="#008ec2"
    />
  </View>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
      }
    }
  >
    <TextInput
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={
        [MockFunction] {
          "calls": [
            [
              "Hello World !",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      onFocus={[Function]}
      placeholder="Your chirp"
      placeholderTextColor="#8E8E8E"
      selectTextOnFocus={true}
      style={
        [
          {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "textAlign": "left",
          },
          {
            "alignContent": "flex-end",
            "borderColor": "#000",
            "borderRadius": 8,
            "borderWidth": 1,
            "padding": 16,
          },
        ]
      }
      value=""
    />
    <View
      style={
        {
          "flexDirection": "row",
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          {
            "alignContent": "flex-end",
            "flexDirection": "row",
            "marginLeft": "auto",
          }
        }
      >
        <View
          style={
            {
              "marginRight": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000",
                  "fontSize": 20,
                  "lineHeight": 26,
                  "textAlign": "left",
                },
              ]
            }
          >
            300
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "padding": 8,
                },
                {
                  "backgroundColor": "#8E8E8E",
                  "borderColor": "#8E8E8E",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000",
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "#fff",
                  },
                ]
              }
            >
              Publish
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TextInputChirp renders correctly when writing more than 300 chars 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderColor": "#000",
      "borderRadius": 8,
      "flexDirection": "row",
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "marginRight": 16,
      }
    }
  >
    <blockies
      bgColor="#ffffff"
      scale={5}
      seed=""
      size={8}
      spotColor="#008ec2"
    />
  </View>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
      }
    }
  >
    <TextInput
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={
        [MockFunction] {
          "calls": [
            [
              "It seems that this message won't fit. It seems that this message won't fit. It seems that this message won't fit. It seems that this message won't fit. It seems that this message won't fit. It seems that this message won't fit. It seems that this message won't fit. It seems that this message won't fit.",
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      onFocus={[Function]}
      placeholder="Your chirp"
      placeholderTextColor="#8E8E8E"
      selectTextOnFocus={true}
      style={
        [
          {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "textAlign": "left",
          },
          {
            "alignContent": "flex-end",
            "borderColor": "#000",
            "borderRadius": 8,
            "borderWidth": 1,
            "padding": 16,
          },
        ]
      }
      value=""
    />
    <View
      style={
        {
          "flexDirection": "row",
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          {
            "alignContent": "flex-end",
            "flexDirection": "row",
            "marginLeft": "auto",
          }
        }
      >
        <View
          style={
            {
              "marginRight": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000",
                  "fontSize": 20,
                  "lineHeight": 26,
                  "textAlign": "left",
                },
              ]
            }
          >
            300
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "padding": 8,
                },
                {
                  "backgroundColor": "#8E8E8E",
                  "borderColor": "#8E8E8E",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000",
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "#fff",
                  },
                ]
              }
            >
              Publish
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TextInputChirp renders correctly with placeholder 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderColor": "#000",
      "borderRadius": 8,
      "flexDirection": "row",
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "marginRight": 16,
      }
    }
  >
    <blockies
      bgColor="#ffffff"
      scale={5}
      seed=""
      size={8}
      spotColor="#008ec2"
    />
  </View>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
      }
    }
  >
    <TextInput
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onFocus={[Function]}
      placeholder="Placeholder"
      placeholderTextColor="#8E8E8E"
      selectTextOnFocus={true}
      style={
        [
          {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "textAlign": "left",
          },
          {
            "alignContent": "flex-end",
            "borderColor": "#000",
            "borderRadius": 8,
            "borderWidth": 1,
            "padding": 16,
          },
        ]
      }
      value=""
    />
    <View
      style={
        {
          "flexDirection": "row",
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          {
            "alignContent": "flex-end",
            "flexDirection": "row",
            "marginLeft": "auto",
          }
        }
      >
        <View
          style={
            {
              "marginRight": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000",
                  "fontSize": 20,
                  "lineHeight": 26,
                  "textAlign": "left",
                },
              ]
            }
          >
            300
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "padding": 8,
                },
                {
                  "backgroundColor": "#8E8E8E",
                  "borderColor": "#8E8E8E",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000",
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "#fff",
                  },
                ]
              }
            >
              Publish
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TextInputChirp renders correctly with undefined public key 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderColor": "#000",
      "borderRadius": 8,
      "flexDirection": "row",
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "marginRight": 16,
      }
    }
  >
    {"name":"person","size":40,"color":"black"}
  </View>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
      }
    }
  >
    <TextInput
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onFocus={[Function]}
      placeholder="Your chirp"
      placeholderTextColor="#8E8E8E"
      selectTextOnFocus={true}
      style={
        [
          {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "textAlign": "left",
          },
          {
            "alignContent": "flex-end",
            "borderColor": "#000",
            "borderRadius": 8,
            "borderWidth": 1,
            "padding": 16,
          },
        ]
      }
      value=""
    />
    <View
      style={
        {
          "flexDirection": "row",
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          {
            "alignContent": "flex-end",
            "flexDirection": "row",
            "marginLeft": "auto",
          }
        }
      >
        <View
          style={
            {
              "marginRight": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000",
                  "fontSize": 20,
                  "lineHeight": 26,
                  "textAlign": "left",
                },
              ]
            }
          >
            300
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "padding": 8,
                },
                {
                  "backgroundColor": "#8E8E8E",
                  "borderColor": "#8E8E8E",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000",
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "#fff",
                  },
                ]
              }
            >
              Publish
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TextInputChirp renders correctly without placeholder 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderColor": "#000",
      "borderRadius": 8,
      "flexDirection": "row",
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "marginRight": 16,
      }
    }
  >
    <blockies
      bgColor="#ffffff"
      scale={5}
      seed=""
      size={8}
      spotColor="#008ec2"
    />
  </View>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 1,
      }
    }
  >
    <TextInput
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[MockFunction]}
      onFocus={[Function]}
      placeholder="Your chirp"
      placeholderTextColor="#8E8E8E"
      selectTextOnFocus={true}
      style={
        [
          {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "textAlign": "left",
          },
          {
            "alignContent": "flex-end",
            "borderColor": "#000",
            "borderRadius": 8,
            "borderWidth": 1,
            "padding": 16,
          },
        ]
      }
      value=""
    />
    <View
      style={
        {
          "flexDirection": "row",
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          {
            "alignContent": "flex-end",
            "flexDirection": "row",
            "marginLeft": "auto",
          }
        }
      >
        <View
          style={
            {
              "marginRight": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000",
                  "fontSize": 20,
                  "lineHeight": 26,
                  "textAlign": "left",
                },
              ]
            }
          >
            300
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "padding": 8,
                },
                {
                  "backgroundColor": "#8E8E8E",
                  "borderColor": "#8E8E8E",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000",
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  {
                    "textAlign": "center",
                  },
                  {
                    "color": "#fff",
                  },
                ]
              }
            >
              Publish
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
